# elm-protoc

./: .gitignore  README.md  elm-protoc.cabal  stack.yaml
app/: Arguments.hs  Constants.hs  Main.hs  ShellUtils.hs
app/Utils/: Http.hs  Zip.hs
examples/: .gitignore  addressbook.proto  build.ps1  crossplatform.cmd  elm-package.json  index.html  run_closure_compiler.cmd  unix.sh  unixbuild.ksh  windows.bat  world.proto
examples/contracts/: Actions.elm  Addressbook.elm  Ship.elm  World.elm
examples/contracts/Native/: Actions.js  Addressbook.js  Proto.js  Ship.js  World.js
examples/contracts/spec/: actions.spec  addressBook.spec  ship.spec  world.spec
examples/definitions/: actions.proto  addressbook.proto  ship.proto  world.proto
examples/src/: Main.elm
examples/trash/: ExampleProtoDeps.js  README  build.ps1  deps_generator_regexes.txt
src/: Lib.hs  Templates.hs  Utils.hs
test/: Spec.hs
