name:                elm-protoc
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/elm-protoc#readme
license:             AGPL-3
license-file:        LICENSE
author:              John P Mayer, Jr.
maintainer:          john.p.mayer.jr@gmail.com
copyright:           2016 John P Mayer, Jr.
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Lib
  build-depends:        base >= 4.7 && < 5
                      , bytestring
                      , hprotoc
                      , neat-interpolation
                      , protocol-buffers-descriptor
  default-language:     Haskell2010

executable elm-protoc
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base
                      , elm-protoc
  default-language:     Haskell2010

test-suite elm-protoc-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base
                      , elm-protoc
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/elm-protoc
