name:                elm-protoc
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/elm-protoc#readme
license:             AGPL-3
license-file:        LICENSE
author:              John P Mayer, Jr.
maintainer:          john.p.mayer.jr@gmail.com
copyright:           2016 John P Mayer, Jr.
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Lib
  other-modules:        Templates
  build-depends:        base
                      , bytestring
                      , directory
                      , filepath
                      , groom
                      , hprotoc >= 2.2.0 && < 3
                      , neat-interpolation
                      , protocol-buffers >= 2.2.0 && < 3
                      , protocol-buffers-descriptor >= 2.2.0 && < 3
                      , text
  default-language:     Haskell2010

executable elm-protoc
  hs-source-dirs:       app
  main-is:              Main.hs
  other-modules:        Arguments
                      , Constants
                      , ShellUtils
                      , Utils.Http
                      , Utils.Zip
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:        base
                      , bytestring
                      , directory
                      , elm-protoc
                      , filepath
                      , http-client
                      , http-client-tls
                      , http-types
                      , MissingH
                      , mtl
                      , network
                      , optparse-applicative
                      , process
                      , regex-compat
                      , shelly
                      , text
                      , zip-archive
  default-language:     Haskell2010

test-suite elm-protoc-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base
                      , directory
                      , elm-protoc
                      , filepath
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/elm-protoc
